# project-2025-patrikramonisabel

./: CMakeLists.txt  README.md
docs/release-1/: SRSTemplate.docx  Team17_Release1_CRC_Cards.md  Team17_Release1_SRS.docx
src/: main.cpp
src/entities/: Order.cpp  Order.h  Photographer.cpp  Photographer.h  Receipt.cpp  Receipt.h  Receptionist.cpp  Receptionist.h  Report.cpp  Report.h
